[cmake] Option to disable test build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,23 +7,29 @@ set (CMAKE_CXX_STANDARD 20)
 
 project (Algo CXX)
 set (Target_lib algo)
- set (Target_tests algo-tests)
+set (Target_tests algo-tests)
 
-include (FetchContent)
-FetchContent_Declare (googletest URL https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip)
-FetchContent_MakeAvailable (googletest)
-enable_testing ()
+
+if (NOT ${DISABLE_TESTS})
+    include (FetchContent)
+    FetchContent_Declare (googletest URL https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip)
+    FetchContent_MakeAvailable (googletest)
+    enable_testing ()
+endif ()
 
 include_directories (src)
-include_directories (${googletest_SOURCE_DIR}/googletest/include)
+if (NOT ${DISABLE_TESTS})
+    include_directories (${googletest_SOURCE_DIR}/googletest/include)
+endif ()
 
 file (GLOB LIB_SOURCES src/*.cc)
 add_library (${Target_lib} ${LIB_SOURCES})
 
-file (GLOB TESTS_SOURCES tests/*.cc)
-add_executable (${Target_tests} ${TESTS_SOURCES})
-target_link_libraries (${Target_tests} ${Target_lib} gtest_main)
+if (NOT ${DISABLE_TESTS})
+    file (GLOB TESTS_SOURCES tests/*.cc)
+    add_executable (${Target_tests} ${TESTS_SOURCES})
+    target_link_libraries (${Target_tests} ${Target_lib} gtest_main)
 
-include (GoogleTest)
-gtest_discover_tests (${Target_tests})
-
+    include (GoogleTest)
+    gtest_discover_tests (${Target_tests})
+endif ()
