[cmake] Refactor directories, fix CMakeLists bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set (Target_lib algo)
 set (Target_tests algo-tests)
 
 
-if (NOT ${DISABLE_TESTS})
+if (NOT DEFINED ${DISABLE_TESTS})
     include (FetchContent)
     FetchContent_Declare (googletest URL https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip)
     FetchContent_MakeAvailable (googletest)
@@ -18,18 +18,20 @@ if (NOT ${DISABLE_TESTS})
 endif ()
 
 include_directories (src)
-if (NOT ${DISABLE_TESTS})
+if (NOT DEFINED ${DISABLE_TESTS})
     include_directories (${googletest_SOURCE_DIR}/googletest/include)
 endif ()
 
-file (GLOB LIB_SOURCES src/*.cc)
+file (GLOB LIB_SOURCES src/algo/*.cc)
 add_library (${Target_lib} ${LIB_SOURCES})
 
-if (NOT ${DISABLE_TESTS})
+if (NOT DEFINED ${DISABLE_TESTS})
     file (GLOB TESTS_SOURCES tests/*.cc)
     add_executable (${Target_tests} ${TESTS_SOURCES})
     target_link_libraries (${Target_tests} ${Target_lib} gtest_main)
 
     include (GoogleTest)
     gtest_discover_tests (${Target_tests})
+else ()
+    message ("No Tests")
 endif ()
